@@ -49,6 +49,7 @@ Improvements::
 * upgrade prawn-svg to 0.38.x (#2604)
 * bypass any dry run logic if remaining height on page is less than heading font size
 * update import_page method on converter to return true if page was imported (nil otherwise), on par with the functionality of method it replaces
+* limit min toclevels value so it does not cause TOC to be empty (#2619)
 
 Bug Fixes::
 
